# hci-2023-1-team-6

./: .dockerignore  Dockerfile  README.md
.github/workflows/: build.yaml  clippy.yaml  eslint.yaml  prettier.yaml  rustfmt.yaml
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  handler.rs  main.rs
frontend/: index.html  package.json
frontend/src/: App.tsx  httpTypes.ts  main.tsx  mutationHooks.ts
