[package]
name = "hci-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-openai = "0.10.3"
axum = "0.6.18"
envy = "0.4.2"
itertools = "0.10.5"
once_cell = "1.17.2"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.4.0", features = ["trace", "fs"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
